# Abdoulie

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  BLUEPRINT_SUMMARY.md  BOOTSTRAP_SUMMARY.md  CHANGELOG_CORE_ENGINE.md  CONTRIBUTING.md  CORE_ENGINE_FILES.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  FEATURE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INVOICE_EXTRACTION_QUICKSTART.md  LICENSE  MILITARY_GRADE_SECURITY_CERTIFICATION.md  Makefile  NEXT_STEPS.md  README.md  README_CORE_ENGINE.md  README_SECURITY_AND_DEPLOYMENT.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SETUP_CHECKLIST.md  docker-compose.prod.yml  docker-compose.yml  quickstart.sh  validate.sh
backend/: .dockerignore  .env.example  DATABASE_MODELS.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  README.md  TESSERACT_CORE_ENGINE.md  alembic.ini  demo_workflow.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  audit_engine.py  create_sample_invoice.py  crud.py  database.py  document_processor.py  main.py  models.py  schemas.py  security.py  seed.py  settings.py
backend/app/routers/: __init__.py  audit_logs.py  audit_results.py  clients.py  contracts.py  health.py  invoice.py  invoices.py
backend/migrations/: README  env.py
backend/migrations/versions/: 001_create_initial_schema.py
backend/tests/: __init__.py  test_audit_engine.py  test_document_processor.py  test_health.py  test_invoice_api.py  test_models.py
docs/: API.md  ARCHITECTURE.md  COMPONENT_1_SYSTEM_ARCHITECTURE_SUMMARY.md  COMPONENT_2_MVP_FEATURE_SET.md  COMPONENT_2_MVP_FEATURE_SET_SUMMARY.md  COMPONENT_3_MONETIZATION_GTM.md  COMPONENT_3_MONETIZATION_GTM_SUMMARY.md  COMPONENT_4_DEVELOPMENT_ROADMAP_SUMMARY.md  COMPONENT_5_KEY_RISKS_MITIGATIONS_SUMMARY.md  CRUD_ENDPOINTS.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  FREIGHT_AUDIT_BLUEPRINT.md  IMPLEMENTATION_STATUS.md  README.md
frontend/: .dockerignore  README.md
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/audits/: page.tsx
frontend/src/app/clients/: page.tsx
frontend/src/app/contracts/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/invoices/: page.tsx
frontend/src/components/: AppHeader.tsx  HealthCard.tsx  PlaceholderPage.tsx
frontend/src/lib/: api.ts
frontend/src/lib/hooks/: index.ts  useAuditLogs.ts  useAuditResults.ts  useClients.ts  useContracts.ts  useInvoices.ts
frontend/src/types/: api.ts  health.ts  index.ts
infra/: README.md
scripts/: generate-api-key.py  security-audit.sh
